--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link type="text/css" href="css/style.css" rel="stylesheet">    
     </head>
     <body>
+        <h1>Hello</h1>
         <h1>#hat & #eyes are in div .upper</h1>
         <h1>#nose, #mouth, & #feet are in div .lower</h1>
         <h1>divs .lower & .upper are in div #body</h1>
